# Emir

./: .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMPILING.md  CONTRIBUTING.md  README.md  TROUBLESHOOTING.md  build-all.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml  ci.yaml  nightly-release.yaml  screenshotter.yaml  stable-release.yaml
apps/: CMakeLists.txt
apps/ymir-dbg/: CMakeLists.txt
apps/ymir-dbg/src/: discovery.hpp  main.cpp
apps/ymir-headless/: CMakeLists.txt
apps/ymir-headless/src/: config.hpp  config_parser.hpp  main.cpp
apps/ymir-libretro/src/: libretro.cpp
apps/ymir-sandbox/: CMakeLists.txt
apps/ymir-sandbox/src/: main.cpp  sandbox_bin_cue_loader.cpp  sandbox_bup.cpp  sandbox_curl.cpp  sandbox_deadlock.cpp  sandbox_disc_info_extractor.cpp  sandbox_host_cd.cpp  sandbox_input.cpp  sandbox_sh2_perf.cpp  sandbox_vdp1_accuracy.cpp  sandbox_vdp1_poly.cpp  sandboxes.hpp
apps/ymir-sdl3/: CMakeLists.txt
apps/ymir-sdl3/res/: io.github.strikerx3.ymir.xml
apps/ymir-sdl3/src/: main.cpp
apps/ymir-sdl3/src/app/: actions.hpp  app.cpp  app.hpp  audio_system.cpp  audio_system.hpp  message.hpp  profile.cpp  rewind_buffer.cpp  rewind_buffer.hpp  settings.cpp  settings.hpp  settings_defaults.hpp  shared_context.cpp  shared_context.hpp
apps/ymir-sdl3/src/app/debug/: cdblock_tracer.cpp  cdblock_tracer.hpp
apps/ymir-sdl3/src/app/events/: emu_debug_event_factory.cpp  emu_debug_event_factory.hpp  emu_event.hpp  emu_event_factory.cpp  emu_event_factory.hpp  gui_event.hpp  gui_event_factory.hpp
apps/ymir-sdl3/src/app/input/: input_utils.hpp
apps/ymir-sdl3/src/app/services/: disc_service.cpp  disc_service.hpp  display_service.cpp  display_service.hpp  file_dialog_service.cpp  file_dialog_service.hpp  input_service.cpp  input_service.hpp  mouse_capture_service.cpp  mouse_capture_service.hpp  persistence_service.cpp  persistence_service.hpp  rom_service.cpp  rom_service.hpp  save_state_service.cpp  save_state_service.hpp  screenshot_service.cpp  screenshot_service.hpp  screenshot_types.hpp  update_checker_service.cpp  update_checker_service.hpp  window_manager_service.cpp  window_manager_service.hpp
apps/ymir-sdl3/src/app/ui/model/debug/: sh2_debugger_model.hpp  sh2_watchpoints_manager.cpp
apps/ymir-sdl3/src/app/ui/state/debug/: memory_viewer_state.hpp
apps/ymir-sdl3/src/app/ui/utils/debug/: vdp_window_set_printer.hpp
apps/ymir-sdl3/src/app/ui/views/: backup_memory_view.cpp
apps/ymir-sdl3/src/app/ui/views/debug/: cdblock_partitions_view.cpp  cdblock_partitions_view.hpp  debug_output_view.cpp  sh2_call_stack_view.cpp  sh2_data_stack_view.cpp  sh2_debug_toolbar_view.cpp  sh2_disassembly_view.cpp  sh2_registers_view.cpp  sh2_watchpoints_view.cpp  sh2_watchpoints_view.hpp  vdp1_registers_view.cpp  vdp2_bg_layer_params_view.cpp  vdp2_bg_layer_params_view.hpp  vdp2_color_calc_params_view.cpp  vdp2_color_calc_params_view.hpp  vdp2_debug_overlay_view.cpp  vdp2_sprite_layer_params_view.cpp  vdp2_sprite_layer_params_view.hpp  vdp2_vram_access_patterns_view.cpp  vdp2_vram_access_patterns_view.hpp  vdp2_window_params_view.cpp  vdp2_window_params_view.hpp
apps/ymir-sdl3/src/app/ui/views/settings/: audio_settings_view.cpp  cartridge_settings_view.cpp  general_settings_view.cpp  gui_settings_view.cpp  hotkeys_settings_view.cpp  input_settings_view.cpp  ipl_settings_view.cpp  system_settings_view.cpp  tweaks_settings_view.cpp  tweaks_settings_view.hpp  video_settings_view.cpp
apps/ymir-sdl3/src/app/ui/widgets/: debug_widgets.cpp  debug_widgets.hpp  peripheral_widgets.cpp  settings_widgets.cpp  settings_widgets.hpp  system_widgets.cpp
apps/ymir-sdl3/src/app/ui/windows/: about_window.cpp  backup_ram_manager_window.cpp  message_history_window.cpp  message_history_window.hpp  settings_window.cpp  system_state_window.cpp  system_state_window.hpp
apps/ymir-sdl3/src/app/ui/windows/debug/: cdblock_filters_window.cpp  cdblock_partitions_window.cpp  cdblock_partitions_window.hpp  cdblock_window_set.hpp  sh2_debugger_window.cpp  vdp2_bg_layer_params_window.cpp  vdp2_bg_layer_params_window.hpp  vdp2_color_calc_params_window.cpp  vdp2_color_calc_params_window.hpp  vdp2_sprite_layer_params_window.cpp  vdp2_sprite_layer_params_window.hpp  vdp2_vram_access_patterns_window.cpp  vdp2_vram_access_patterns_window.hpp  vdp2_window_params_window.cpp  vdp2_window_params_window.hpp  vdp_window_set.hpp
apps/ymir-sdl3/src/serdes/: cereal_savestate.hpp
cmake/config/: arch-x86_64.json  build.json  compiler-clang-cl.json  compiler-msvc.json  generator-ninja.json  platform-windows.json  targets.json  toolchain-vcpkg.json
cmake/presets/: full-x86_64-AVX2-clang.json  full-x86_64-AVX2-msvc.json  full-x86_64-SSE2-clang.json  full-x86_64-SSE2-msvc.json  libonly-x86_64-AVX2-clang.json  libonly-x86_64-AVX2-msvc.json  libonly-x86_64-SSE2-clang.json  libonly-x86_64-SSE2-msvc.json
docs/dev-notes/: game-bugs.txt
libs/: CMakeLists.txt
libs/ymir-core/: CMakeLists.txt
libs/ymir-dbg-commons/: CMakeLists.txt
libs/ymir-dbg-commons/include/protocol/: json_rpc_adapter.hpp  line_framer.hpp
libs/ymir-dbg-commons/include/ymir/debug/protocol/: debug_command.hpp  debug_event.hpp  debug_result.hpp  debug_types.hpp  protocol_version.hpp
libs/ymir-dbg-commons/include/ymir/debug/util/: env.hpp  path.hpp
tests/: CMakeLists.txt
tests/ymir-core-tests/: CMakeLists.txt
tests/ymir-core-tests/src/hw/scu/: scu_dsp_tests.cpp
tests/ymir-core-tests/src/hw/sh2/: sh2_intc_tests.cpp  sh2_macwl_tests.cpp
tests/ymir-core-tests/src/hw/vdp/: vdp_vram_access_patterns_testdata.inc
tests/ymir-dbg-tests/: CMakeLists.txt
tests/ymir-dbg-tests/src/: discovery_tests.cpp  protocol_tests.cpp  smoke_tests.cpp
tests/ymir-headless-tests/: CMakeLists.txt
tests/ymir-headless-tests/src/: config_parser_tests.cpp  config_tests.cpp  protocol_tests.cpp  smoke_tests.cpp
tests/ymir-libretro-tests/: conftest.py  helpers.py  requirements.txt  run_tests.sh  test_api_compliance.py  test_audio.py  test_core_options.py  test_game_boot.py  test_input.py  test_lifecycle.py  (+3 more)
(+116 files in other folders)
