if (Ymir_ENABLE_SANDBOX)
	add_subdirectory(ymir-sandbox)
endif ()
if (Ymir_ENABLE_SDL3_APP)
	add_subdirectory(ymir-sdl3)
endif ()
if (Ymir_ENABLE_YMDASM)
	add_subdirectory(ymdasm)
endif ()
if (Ymir_ENABLE_LIBRETRO)
	add_subdirectory(ymir-libretro)
endif ()
if (Ymir_ENABLE_YMIR_HEADLESS)
	add_subdirectory(ymir-headless)
endif ()
if (Ymir_ENABLE_YMIR_DBG)
	add_subdirectory(ymir-dbg)
endif ()
